--- a/my-app/styles/Home.module.css
+++ b/my-app/styles/Home.module.css
@@ -43,6 +43,10 @@
   width: 200px;
   cursor: pointer;
   margin-bottom: 2%;
+  cursor: pointer;
+}
+.button:hove {
+  background: blue;
 }
 @media (max-width: 1000px) {
   .main {
